# P455w0rd

./: .gitignore  Cargo.toml  README.md  debug_count.rs  debug_variants  justfile
benches/: combinatorial_bench.rs
src/: args.rs  combinatorics.rs  display.rs  generator.rs  generator_old.rs  lib.rs  main.rs  words.rs
tests/: edge_cases.rs
